updated to views, templates and css to ensure non-compulsory fields are handled and additional spacings are removed

--- a/Focal1/static/home.css
+++ b/Focal1/static/home.css
@@ -77,6 +77,7 @@ label {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: bold;
+  margin: 2px;
 }
 input,
 button {
